--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = libgusb
-url = https://github.com/hughsie/libgusb/archive/0.3.7/libgusb-0.3.7.tar.gz
+url = https://github.com/hughsie/libgusb/archive/0.3.8/libgusb-0.3.8.tar.gz
 archives = 
 giturl = https://github.com/hughsie/libgusb.git
 domain = 
@@ -47,6 +47,8 @@ optimize_size = false
 pgo = false
 # set flags for security-sensitive builds
 security_sensitive = false
+# package is only used by servers
+server = false
 # do not run test suite
 skip_tests = true
 # add .so files to the lib package instead of dev
