--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = libgusb
-url = https://github.com/hughsie/libgusb/archive/0.3.10/libgusb-0.3.10.tar.gz
+url = https://github.com/hughsie/libgusb/archive/0.4.0/libgusb-0.4.0.tar.gz
 archives = 
 giturl = https://github.com/hughsie/libgusb.git
 domain = 
@@ -50,7 +50,7 @@ security_sensitive = false
 # package is only used by servers
 server = false
 # do not run test suite
-skip_tests = true
+skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for avx2
