libgusb: Autospec creation for update from version 0.4.2 to version 0.4.3
Richard Hughes (6):
      trivial: post release version bump
      Export g_usb_device_has_tag()
      trivial: Fix up a gtk-doc comment
      Work around a libusb1 bug which causes devices to appear in the list twice
      trivial: Be less verbose
      Release version 0.4.3

Version 0.4.3
=============
Released: 2022-12-20

This release fixes the following bugs:
 * Export g_usb_device_has_tag()
 * Work around a libusb issue which causes devices to appear twice

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = libgusb
-url = https://github.com/hughsie/libgusb/archive/0.4.2/libgusb-0.4.2.tar.gz
+url = https://github.com/hughsie/libgusb/archive/0.4.3/libgusb-0.4.3.tar.gz
 archives = 
 giturl = https://github.com/hughsie/libgusb.git
 domain = 
@@ -35,6 +35,8 @@ insecure_build = false
 keepstatic = false
 # do not require autostart subpackage
 no_autostart = false
+# do not use the replacement pattern for file matching
+no_glob = false
 # do not generate debuginfo for this package
 nodebug = false
 # disable stripping binaries
