--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = libgusb
-url = https://github.com/hughsie/libgusb/archive/0.4.5/libgusb-0.4.5.tar.gz
+url = https://github.com/hughsie/libgusb/archive/0.4.6/libgusb-0.4.6.tar.gz
 archives = 
 giturl = https://github.com/hughsie/libgusb.git
 domain = 
@@ -19,6 +19,8 @@ autoupdate = true
 broken_c++ = false
 # disable parallelization during build
 broken_parallel_build = false
+# create vendor archive with cargo
+cargo_vendor = false
 # this package is a library compatibility package and only ships versioned library files
 compat = false
 # set conservative build flags
@@ -58,7 +60,7 @@ skip_tests = false
 # add .so files to the lib package instead of dev
 so_to_lib = false
 # configure build for avx2
-use_avx2 = false
+use_avx2 = true
 # configure build for avx512
 use_avx512 = false
 # add clang flags
